--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Udemy Website</title>
    
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Great+Vibes&family=Josefin+Slab:wght@100&family=Montserrat:wght@300&display=swap" rel="stylesheet">
